Replace image sources with local files

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="image-container">
                 <div class="flower flower-left">✿</div>
                 <div class="flower flower-right">✿</div>
-                <img src="https://media.tenor.com/K2s2t4a_iJcAAAAi/mochi-peach-cat-mochi-cat.gif" alt="Sad Cat" class="character-img">
+                <img src="sad.gif" alt="Sad Cat" class="character-img">
             </div>
             <h1>I'm Sorry</h1>
             <p>I know I hurt you... and I've been feeling really bad about it.</p>
@@ -186,7 +186,7 @@
                 <div class="flower flower-left">✿</div>
                 <div class="flower flower-right">✿</div>
                 
-                <img src="https://media.tenor.com/P59-y1XzL-AAAAAi/mochi-cat-pleading.gif" alt="Pleading" class="character-img">
+                <img src="please.gif" alt="Pleading" class="character-img">
             </div>
             <h2>Will you forgive me?</h2>
             <p>I promise to be better. Please? 🥺</p>
@@ -205,7 +205,7 @@
                 <div class="flower flower-left">✿</div>
                 <div class="flower flower-right">✿</div>
                 
-                <img src="https://media.tenor.com/2s46u31y2CcAAAAi/mochi-mochi-peach-cat.gif" alt="Happy Cat" class="character-img">
+                <img src="celebrate.gif" alt="Happy Cat" class="character-img">
             </div>
             <h1>Yay! ❤️</h1>
             <p>Thank you for forgiving me! I love you so much!</p>
